selfhost/test/parser/match_error_case_expr.out
Error at %FILE_NAME%:1:15
Unexpected token '+', expected one of 'identifier', '=>':
  |  match foo { 1 + 2 => 123 }
                   ^