selfhost/test/parser/match_error_case_expr.abra
match foo { 1 + 2 => 123 }